# ctracer

./: CMakeLists.txt  README.md
docs/: cheat-sheet.tex  generate-code.sh  style.tex  vsnew.py
docs/code/: cmake.cmake  cmake.cmake.tex  cycler.cc  cycler.cc.tex  cycles.cc  cycles.cc.tex  headers.cc  headers.cc.tex  trace.cc  trace.cc.tex  usage.cc  usage.cc.tex
src/ctracer/: ChunkAllocator.cc  ChunkAllocator.hh  benchmark.cc  benchmark.hh  chunk.cc  chunk.hh  detail.hh  scope.cc  scope.hh  trace-config.hh  trace-container.cc  trace-container.hh  trace.cc  trace.hh  trace.output.cc
